# pico-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
boards/: yd_rp2040.h
openocd/: probe.cfg
src/: main.cpp
